--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,7 @@
     "streambuf": "cpp",
     "thread": "cpp",
     "cinttypes": "cpp",
-    "typeindex": "cpp"
+    "typeindex": "cpp",
+    "*.inc": "cpp"
   }
 }
